Fixed API extending too far on Mobile, moved positioning higher, added more media queries to other images to format them properly.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -84,10 +84,14 @@ nav.navbar {
   z-index: 100;
   position: fixed;
   right: -350px;
-  top: 20vh;
+  top: 50px;
   width: 350px;
   height: 70vh;
   border-radius: 20px 0 0 20px;
+  @media (max-width: 750px) {
+    width: 300px;
+    right: -300px;
+  }
 }
 
 #clicksidebar {
@@ -98,7 +102,7 @@ nav.navbar {
   border-radius: 100% 0 0 100%;
   position: fixed;
   right: -5px;
-  top: 40vh;
+  top: 30vh;
   height: 200px;
   width: 35px;
   background: #888;
