--- a/app/assets/stylesheets/images.css.scss
+++ b/app/assets/stylesheets/images.css.scss
@@ -39,6 +39,10 @@
     padding: 5px;
     width: 100%;
     height: 100%;
+    @media (max-width: 767px) {
+      width: 50%;
+      height: 50%;
+    }
   }
 
   #favs {
@@ -47,13 +51,13 @@
     margin-bottom: 10px;
     height: 12vw;
     width: 12vw;
-    @media (max-width: 500px) {
-      height: 40vw;
-      width: 40vw;
-    }
     @media (max-width: 850px) {
       height: 20vw;
       width: 20vw;
+    }
+    @media (max-width: 500px) {
+      height: 40vw;
+      width: 40vw;
     }
   }
 
